# Ideation

./: .gitignore  README.md
desktop/: index.html  package.json
desktop/public/: indicator.html
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: audio.rs  commands.rs  healing.rs  history.rs  lib.rs  main.rs  model_manager.rs  settings.rs  state.rs  structuring.rs  transcribe.rs
desktop/src/components/: HistoryView.tsx  ModelDownloader.tsx  Settings.tsx  StatusIndicator.tsx  TranscriptView.tsx
desktop/src/hooks/: useRecording.ts
extension/: PRIVACY_POLICY.md  STORE_LISTING.md  generate-icons.cjs  package.json  popup.html  tailwind.config.js  tsconfig.json  vite.config.ts
extension/manifests/: manifest.full.json  manifest.lite.json
extension/src/: service-worker.ts  types.ts
extension/src/components/: HistoryView.tsx  MicButton.tsx  ModelStatus.tsx  SettingsPanel.tsx  TranscriptBox.tsx
extension/src/hooks/: useHistory.ts  useRecording.ts  useSettings.ts  useWhisper.ts
extension/src/lib/: audio.ts  healing.ts  storage.ts  structuring.ts
extension/src/popup/: App.tsx  AppFull.tsx  AppLite.tsx  index.css
extension/src/workers/: whisper.worker.ts
