[package]
name = "ideation"
version = "0.1.0"
description = "Voice-to-prompt ideation tool"
authors = ["you"]
edition = "2021"

[lib]
name = "ideation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
rubato = "0.16"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
whisper-rs = "0.16"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
enigo = "0.2"
rodio = { version = "0.20", default-features = false, features = ["wav"] }
tauri-plugin-updater = "2"
# Note: llama-cpp-2 conflicts with whisper-rs (duplicate ggml symbols)
# Phi-4-mini runs via llama-server subprocess instead

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
